--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,67 +7,70 @@
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width"/>
     <base href="/"/>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
-    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/webjars/js-cookie/js.cookie.js"></script>
+    <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css"/>
+    <script src="/webjars/jquery/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/webjars/js-cookie/js.cookie.js"></script>
     <style>
-        .authenticated { display: none; }
-        .unauthenticated { display: none; }
+        .authenticated, .unauthenticated { display: none; }
+        .error { margin-top: 10px; font-weight: bold; }
     </style>
 </head>
 <body>
-<h1>Social Application by SSO Login</h1>
 <div class="container">
-    <div class="container unauthenticated">
-        With GitHub: <a href="/oauth2/authorization/github">click here</a>
+    <h1>Social Application by SSO Login</h1>
+
+    <div class="text-danger error"></div>
+
+    <div class="unauthenticated">
+        <p>With GitHub: <a href="/oauth2/authorization/github">click here</a></p>
+        <p>With Google: <a href="/oauth2/authorization/google">click here</a></p>
     </div>
-    <div class="container authenticated">
+
+    <div class="authenticated">
         Logged in as: <span id="user"></span>
         <div>
-            <button onClick="logout()" class="btn btn-primary">Logout</button>
+            <button onclick="logout()" class="btn btn-primary">Logout</button>
         </div>
     </div>
 </div>
 </body>
-<script type="text/javascript">
-    $.get("/user", function(data) {
-        $("#user").html(data.name);
-        $(".unauthenticated").hide()
-        $(".authenticated").show()
+
+<script>
+    // Setup CSRF header for secure POST
+    $.ajaxSetup({
+      beforeSend: function(xhr, settings) {
+        if (['POST', 'PUT', 'DELETE'].includes(settings.type) && !/^https?:/.test(settings.url)) {
+          xhr.setRequestHeader("X-XSRF-TOKEN", Cookies.get('XSRF-TOKEN'));
+        }
+      }
     });
 
-    var logout = function() {
-    $.post("/logout", function() {
+    // Handle user session check
+    $.get("/user")
+      .done(function(data) {
+        $("#user").html(data.name || data.login);
+        $(".authenticated").show();
+      })
+      .fail(function() {
+        $(".unauthenticated").show();
+      });
+
+    // Handle logout
+    function logout() {
+      $.post("/logout", function() {
         $("#user").html('');
         $(".unauthenticated").show();
         $(".authenticated").hide();
-    })
-    return true;
-}
-    $.ajaxSetup({
-  beforeSend : function(xhr, settings) {
-    if (settings.type == 'POST' || settings.type == 'PUT'
-        || settings.type == 'DELETE') {
-      if (!(/^http:.*/.test(settings.url) || /^https:.*/
-        .test(settings.url))) {
-        // Only send the token to relative URLs i.e. locally.
-        xhr.setRequestHeader("X-XSRF-TOKEN",
-          Cookies.get('XSRF-TOKEN'));
-      }
+      });
+      return true;
     }
-  }
-});
-    $.get("/user")
-  .done(function(data) {
-    $("#user").html(data.name);
-    $(".unauthenticated").hide();
-    $(".authenticated").show();
-  })
-  .fail(function() {
-    $(".unauthenticated").show();
-    $(".authenticated").hide();
-  });
 
+    // Display login error from URL param if exists
+    $.get("/error", function(data) {
+        if (data && data.error) {
+            $(".error").html(data.error);
+        }
+    });
 </script>
 </html>
